Version 1.3.x (2011-01-xx)
	Added removeEvent and removeAllEvents methods and modified addEvent accordingly, in order to support dynamic unload.
	Added unbindAll method.
	Added UploadComplete event, which fires when internal iterator reaches the end of the queue.
	Added public destroy method to plupload object, new event - Destroy, and corresponding handlers to all runtimes.
	Added Czech, Italian and French translations.
	Added support for translatable error messages.
	Added two new options: browse_button_hover and browse_button_active, in order to support browse_button interactivity.	
	Added support for 'multi_selection: false' to Silverlight runtime.
	Added support for video/mp4, video/x-m4v and ... MIME Types. 
	Added artificial sendAsBinary method to XMLHttpRequest.prototype for browsers that have support for BlobBuilder and typed arrays.
	Fixed measurements of browse_button element in order to size and position input[type=file] element to fit it fully.
	Fixed Flash runtime behavior for multiple_select=false and other simpleUpload usage cases: basically new FileReference has to be created for every select dialog. 
	Fixed browser sniffer to match only Safari, for fakeSafariDragDrop (seems like Safari on Mac doesn't require it either).
	Fixed so the ExternalInterface escape strings properly, before passing then to JS. 
	Fixed eventual reinitialization of flash/silverlight runtimes, especially for the cases when object wrapper needs to be programmatically hidden and then shown again.
	Fixed so that Plupload will now ignore files with duplicate names when adding to the queue, in one set. Mainly introduced to work around Safari on Windows bug (https://bugs.webkit.org/show_bug.cgi?id=37957).
	Fixed bug, when final UploadProgress was firing after FileUploaded for Flash simpleUpload. 
	Fixed bug where upload would fail if an error was produced inside the FilesAdded event.
	Fixed bug in Flash runtime when it used a wrong size when resizing, but not chunking.