@@ -1,0 +1,12 @@
+// Dutch
+plupload.addI18n({
+	'Select files' : 'Selecteer bestand(en):',
+	'Add files to the upload queue and click the start button.' : 'Voeg bestanden toe aan de wachtrij en druk op \'Start\'.',
+	'Filename' : 'Bestandsnaam',
+	'Status' : 'Status',
+	'Size' : 'Grootte',
+	'Add files' : 'Voeg bestanden toe',
+	'Stop current upload' : 'Stop upload',
+	'Start uploading queue' : 'Start upload',
+	'Drag files here.' : 'Sleep bestanden hierheen.'
+});
