@@ -3,7 +3,7 @@ Version 1.3.x (2011-01-xx)
 	Added unbindAll method.
 	Added UploadComplete event, which fires when internal iterator reaches the end of the queue.
 	Added public destroy method to plupload object, new event - Destroy, and corresponding handlers to all runtimes.
-	Added Czech, Italian and French translations.
+	Added Czech, Italian, French, Dutch translations.
 	Added support for translatable error messages.
 	Added two new options: browse_button_hover and browse_button_active, in order to support browse_button interactivity.	
 	Added support for 'multi_selection: false' to Silverlight runtime.
@@ -19,6 +19,7 @@ Version 1.3.x (2011-01-xx)
 	Fixed bug where upload would fail if an error was produced inside the FilesAdded event.
 	Fixed bug in Flash runtime when it used a wrong size when resizing, but not chunking.
 	Fixed bug in Silverlight runtime that would keep sending 0 byte packages when a picture was chunked before resized.
+	Disabled blur filter now (is going to be replaced with some bilinear resampling in next release).
 	Completely revised UI Widget, to be more jQuery UI oriented. Optionally depends on UI Button, UI Sortable, UI ProgressBar.	
 Version 1.3.0 (2010-11-24)
 	Added new jQuery UI widget that supports jQuery UI themes.
